<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/releaseTypePickerPadding">

        <RadioGroup
            android:id="@+id/radioButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/majorReleaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseTypeMajor"/>

            <RadioButton
                android:id="@+id/minorReleaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseTypeMinor"/>

            <RadioButton
                android:id="@+id/bugFixReleaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseTypeBugFix"/>
        </RadioGroup>

        <ScrollView
            android:layout_marginTop="@dimen/releaseTypePickerPadding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/releaseTypeInfoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/releaseTypePickerPadding"
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/optionNext"/>
</LinearLayout>
